# Track-and-Control

./: README.md  build_project.bat
presentation/videos/: ObjectTracker.avi
sql/: TACS.db
tacs_project/: CMakeLists.txt  FacialRecognitionTracker.cpp  FacialRecognitionTracker.h  MouseTracker.cpp  MouseTracker.h  ObjectTracker.cpp  ObjectTracker.h  SettingsModule.cpp  SettingsModule.h  SleepManager.cpp  SleepManager.h  TACSMain.cpp  Tracker.cpp  Tracker.h  WindowsGridOrganizer.cpp  WindowsGridOrganizer.h  WindowsPerspective.cpp  WindowsPerspective.h  settingsManager.cpp
tex/odd/: ODD_TACS.aux  ODD_TACS.log.orig  ODD_TACS.out  ODD_TACS.tex  ODD_TACS.toc  decomposition_description.docx  package_diagram.docx
tex/odd/examples/: Ch09 Lect 1 Object Design and Specifying Interfaces.pptx  ODD_Template.docx
tex/proposal/: Track and Control Proposal.aux  Track and Control Proposal.out  Track and Control Proposal.tex
tex/sdd/: Notes.txt  SDD_TACS.aux  SDD_TACS.out  SDD_TACS.tex  SDD_TACS.toc  architectural_design.docx  architectural_design.pptx  data_dictionary.docx  decomposition_description.docx  requirements_matrix.docx
tex/sdd/examples/: SDD_SmartSeat.docx
tex/sdd/gui/: gui_mockup.pptx  tabs_testing_tm.html  tabs_testing_wcm.html
tex/srs/: Deery_Hyder_SRSdocument.doc  SRS_TAC.aux  SRS_TAC.dvi  SRS_TAC.out  SRS_TAC.tex  SRS_TAC.toc  SRS_TACS.aux  SRS_TACS.out  SRS_TACS.toc  SRSdocument.doc  SRSdocument_SmartSeat.doc
tex/template/: template.aux  template.tex
tracking_module/: CMakeLists.txt  Tracking.cpp
